# Bitem

./: .gitignore
backend/: Cargo.toml
backend/src/: controllers.rs  db.rs  main.rs  models.rs  routes.rs  services.rs
frontend/: package-lock.json  package.json  tsconfig.json
frontend/public/: index.html
frontend/src/: App.jsx  api.js  index.js
frontend/src/components/: CreateItem.jsx  DarkModeToggle.jsx  ItemDetails.jsx  ItemList.jsx  ItemListPopup.jsx  Payment.jsx
frontend/src/styles/: Icon.jsx  selection.json
