[package]
name = "bitem"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
mongodb = { version = "2", features = ["tokio-runtime"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
async-stripe = { version = "0.30", features = ["runtime-tokio-hyper"] }
actix-cors = "0.7"
